# magic_squares_of_squares

./: Cargo.toml  README.md  quasi_magic_squares_k10_p199.txt  quasi_magic_squares_list_10million.txt
.cargo/: config.toml
src/: conjecture.rs  generate_squares.rs  magic_squares.rs  main.rs  utils.rs
