[package]
name = "magic_squared_squares"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = true
opt-level = 3
debug = true

[dependencies]
fxhash = "0.2.1"
num-integer = "0.1.46"
num_cpus = "1.16.0"
rayon = "1.10.0"
