[package]
name = "magic_squared_squares"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
panic = "abort"

[profile.benchmark]
inherits = "release"
debug = true
strip = "none"

[dependencies]
fxhash = "0.2.1"
num-integer = "0.1.46"
num_cpus = "1.16.0"
rayon = "1.10.0"
